--- a/app/src/main/res/layout/start_fragment.xml
+++ b/app/src/main/res/layout/start_fragment.xml
@@ -5,60 +5,83 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
+    android:background="#DFDEDF"
     android:fadingEdge="horizontal|vertical"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     android:theme="@style/Theme.AppCompat"
-    tools:context=".startFragment">
+    tools:context=".startFragment"
+    android:layout_gravity="center">
 
-    <ImageView
-        android:id="@+id/imageViewLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="100dp"
-        android:clickable="true"
-        android:contentDescription="@string/logo_name"
-        android:onClick="onClick"
-        android:src="@mipmap/ic_launcher_round"
-        android:text="@string/logo_action" />
-
-
-    <ImageView
-        android:id="@+id/image_view_menu"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500px"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="200px"
-        android:alpha="0.98"
-        android:baselineAlignBottom="false"
-        android:fadingEdge="horizontal|vertical"
-        android:scaleType="fitXY" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_gravity="center|top"
+            android:layout_marginTop="50dp"
+            android:textSize="12sp"
+            android:textColor="#504e54"
+            android:text="Get random menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/imageViewLogo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center|top"
+            android:layout_marginTop="5dp"
+            android:clickable="true"
+            android:contentDescription="@string/logo_name"
+            android:onClick="onClick"
+            android:src="@mipmap/ic_launcher_round"
+            android:text="@string/logo_action" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/round_bg"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
+            <TextView
+                android:id="@+id/txtViewMenueTitle"
+                android:layout_gravity="center|top"
+                android:textSize="20sp"
+                android:textColor="#504e54"
+                android:textStyle="bold"
+                android:text="Dies ist ein Test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|top"
+                android:layout_marginTop="10dp"
+                app:cardCornerRadius="288dp">
+                <ImageView
+                    android:id="@+id/image_view_menu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center|top"
+                    android:alpha="0.98"
+                    android:scaleType="fitXY" />
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/txtViewMenueInfo"
+                android:layout_gravity="center|top"
+                android:textSize="20sp"
+                android:textColor="#504e54"
+                android:textStyle="bold"
+                android:text="Dies ist ein Test"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/txtViewMenueTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:layout_marginBottom="680px"
-        android:layout_marginLeft="5px"
-        android:alpha="0.7"
-        android:background="#BEBEBE"
-        android:text=""
-        android:textColor="@android:color/black"
-        android:textSize="50px"
-        android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/txtViewMenueInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:layout_marginBottom="160px"
-        android:layout_marginLeft="5px"
-        android:alpha="0.7"
-        android:background="#BEBEBE"
-        android:text=""
-        android:textColor="@android:color/black"
-        android:textSize="50px"
-        android:textStyle="bold"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
